[package]
name = "io-trace-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
io-trace-common = { path = "../io-trace-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "io-trace"
path = "src/main.rs"
